--- a/eficiencia/analise.html
+++ b/eficiencia/analise.html
@@ -166,39 +166,38 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" style=" color: white;
-                text-shadow: 3px 3px 3px black;"> Por quê minha conta de luz está alta?</h2>
-              <p style="color: white;
-                text-shadow: 3px 3px 3px black;">
+              <h2 class="title" 
+                > Por quê minha conta de luz está alta?</h2>
+              <p 
+                >
                 Vários fatores são comuns para o aumento da conta de luz:mau dimensionamento dos equipamentos (demanda), multas, maus hábitos
                 de consumo e equipamentos de alto consumo. Os dois primeiros ocorrem apenas em contas tipo A (geralmente
                 empresas).
               </p>
-              <p style="color: white;
-         text-shadow: 3px 3px 3px black;">
+              <p>
                 Uma outra causa, mais difícil de identificar, são fugas de corrente: parte da energia não chega nos equipamentos porque se
                 dissipa no meio do caminho.
               </p>
-              <p style="color: white;
-text-shadow: 3px 3px 3px black;">
+              <p 
+>
                 Por meio de equipamento chamado de analisador de cargas, podemos identificar a qualidade da energia que chega ao imóvel.
                 Isso permite identificar onde e se há fugas de corrente.
               </p>
 
 
 
-              <h2 class="title" style="color: white;
-         text-shadow: 3px 3px 3px black;"> O que eu posso fazer?</h2>
-              <p style="color: white;
-         text-shadow: 3px 3px 3px black;">
+              <h2 class="title" 
+         > O que eu posso fazer?</h2>
+              <p 
+         >
                 Um estudo detalhado é necessário para cada caso. Contudo, algumas medidas são muito comuns: trocar lâmpadas fluorescentes
                 por lâmpadas LED, desligar equipamentos quando não usados (mesmo em stand-by, eles ainda consomem energia).
               </p>
 
-              <p style=" color: white;
-            text-shadow: 3px 3px 3px black;" class="description">
+              <p 
+             class="description">
                 A ENETEC analisa a sua conta de luz e também a qualidade de energia. Não pague mais que o necessário!
-                <a href="../contact.html">
+                <a href="#contact">
                   Fale conosco.
                 </a>
                 Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
@@ -219,8 +218,8 @@ text-shadow: 3px 3px 3px black;">
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" >O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -239,7 +238,7 @@ text-shadow: 3px 3px 3px black;">
               <h5 class="card-title">Instalações Elétricas</h5>
               <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
+                <a href="#contact">Fale conosco</a>
               </p>
             </div>
           </div>
