--- a/eficiencia/lumino.html
+++ b/eficiencia/lumino.html
@@ -166,28 +166,28 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" style=" color: white;
-                text-shadow: 3px 3px 3px black;"> O que é?</h2>
-              <p style="color: white;
-                text-shadow: 3px 3px 3px black;">
+              <h2 class="title" 
+                > O que é?</h2>
+              <p 
+                >
                 O estudo luminotécnico consiste em analisar os ambientes, o cotidiano desse local e as lâmpadas para decidir quais lâmpadas
                 usar, em qual lugar e a potência necessária.
               </p>
 
 
 
-              <h2 class="title" style="color: white;
-         text-shadow: 3px 3px 3px black;"> Por quê fazer?</h2>
-              <p style="color: white;
-         text-shadow: 3px 3px 3px black;">
+              <h2 class="title" 
+         > Por quê fazer?</h2>
+              <p 
+         >
                 Se bem feito, o estudo luminotécnico permite uma economia de energia nas contas porque garante que somente seja consumido
                 o necessário. Além disso, ele também traz um conforto visual para os frequentadores do ambiente.
               </p>
 
-              <p style=" color: white;
-            text-shadow: 3px 3px 3px black;" class="description">
+              <p 
+             class="description">
                 A ENETEC faz estudos luminotécnicos. Tenha conforto pagando menos!
-                <a href="../contact.html">
+                <a href="#contact">
                   Fale conosco.
                 </a>
                 Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
@@ -208,8 +208,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" >O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -228,7 +228,7 @@
               <h5 class="card-title">Instalações Elétricas</h5>
               <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
+                <a href="#contact">Fale conosco</a>
               </p>
             </div>
           </div>
