--- a/instalacoes/spda.html
+++ b/instalacoes/spda.html
@@ -166,21 +166,21 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" style=" color: white;
-                text-shadow: 3px 3px 3px black;">O que é?</h2>
-              <p style="color: white;
-                text-shadow: 3px 3px 3px black;">
+              <h2 class="title" 
+                >O que é?</h2>
+              <p 
+                >
                 É um sistema que protege tanto os equipamentos quanto as pessoas de raios. São conhecidos comumente com o nome de para-raios.
 
               </p>
 
               <div class=" wow fadeInUp" data-wow-delay="0.4s">
                 <h4 class="title">
-                  <a style=" color: white;
-          text-shadow: 3px 3px 3px black;" href="">Por quê implementar?</a>
+                  <a 
+           href="">Por quê implementar?</a>
                 </h4>
-                <p style=" color: white;
-          text-shadow: 3px 3px 3px black;" class="description">
+                <p 
+           class="description">
                   De acordo com a norma, é obrigatório para prédios acima de 30 metros. Contudo, é essencial para qualquer edíficio/residência,
                   pois as consequências de descargas atmosféricas podem ser catastróficas: Segundo o G1, 116 pessoas morrem
                   de raios por ano no Brasil. Além disso, é muito comum equipamentos eletrônicos queimarem por isso.
@@ -190,13 +190,13 @@
 
                 <div class=" wow fadeInUp" data-wow-delay="0.4s">
                   <h4 class="title">
-                    <a style=" color: white;
-            text-shadow: 3px 3px 3px black;" href="">O que fazer?</a>
+                    <a 
+             href="">O que fazer?</a>
                   </h4>
-                  <p style=" color: white;
-            text-shadow: 3px 3px 3px black;" class="description">
+                  <p 
+             class="description">
                     A ENETEC oferece serviços de consultoria em projetos de para-raios. Não corra riscos desnecessários!
-                    <a href="../contact.html">
+                    <a href="#contact">
                       Fale conosco.
                     </a>
                     Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
@@ -219,8 +219,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" >O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -239,7 +239,7 @@
               <h5 class="card-title">Instalações Elétricas</h5>
               <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
+                <a href="#contact">Fale conosco</a>
               </p>
             </div>
           </div>
@@ -276,32 +276,7 @@
         </div>
     </section>
     <!-- #services -->
-    <!--==========================
-    Call To Action Section
-    ============================-->
-    <section id="call-to-action">
-      <div class="container wow fadeIn">
-        <div class="row">
-          <div class="col-lg-9 text-center text-lg-left">
-            <h3 class="cta-title" style="padding-top: 90px;">Quer começar agora? Entre em contato conosco
-              <a href="../contact.html">aqui</a> ou entre no chat do site e fale agora com um de nossos atendentes.</h3>
-          </div>
-          <div class="col-lg-3 cta-btn-container text-center">
-            <p>
-              <a class="cta-btn align-middle" href="port.html">Veja nosso portfólio</a>
-              <a class="cta-btn align-top" href="#">Baixe nosso e-book gratuito</a>
-              <a class="cta-btn align-bottom" href="#">Visite nosso blog</a>
-            </p>
-          </div>
-        </div>
-
-      </div>
-    </section>
-    <!-- #call-to-action -->
-
-
-
-
+  
       <!--==========================
       Contact Section
       ============================-->
