--- a/eficiencia/quiz.html
+++ b/eficiencia/quiz.html
@@ -121,7 +121,7 @@
               <a href="../blog">Blog</a>
             </li>
             <li>
-              <a href="../contact.html">Contato</a>
+              <a href="#contact">Contato</a>
             </li>
         </ul>
       </nav>
