--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" >O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -315,8 +315,7 @@
 
               <div class=" wow fadeInUp">
                 <h4 class="title">
-                  <a style="color: white;
-                  text-shadow: 0.5px 0.5px 0.5px black;" href="">Valorização do seu imóvel</a>
+                  <a  href="">Valorização do seu imóvel</a>
                 </h4>
                 <p class="description">Uma pesquisa criada pelo Lawrence Berkeley Lab, divulgada no jornal New York Times, pesquisou 23 mil imóveis
                   em 8 estados americanos, e demonstrou que todos os clientes que adquiriram um sistema solar fotovoltaico
@@ -328,8 +327,7 @@
 
               <div class=" wow fadeInUp" data-wow-delay="0.2s">
                 <h4 class="title">
-                  <a style="color: white;
-                  text-shadow: 0.5px 0.5px 0.5px black;" href="">Segurança</a>
+                  <a href="">Segurança</a>
                 </h4>
                 <p sclass="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
                   residência. Os acidentes de origem elétrica aumentaram em todo o Brasil, segundo o anuário divulgado pela
@@ -340,8 +338,7 @@
 
               <div class=" wow fadeInUp" data-wow-delay="0.4s">
                 <h4 class="title">
-                  <a style="color: white;
-                  text-shadow: 0.5px 0.5px 0.5px black;" href="">Economia no seu bolso</a>
+                  <a  href="">Economia no seu bolso</a>
                 </h4>
                 <p class="description">Com os diversos problemas de projeto e execução que se encontram em construções, o dono sempre está perdendo
                   energia por falta de um bom planejamento de Eficiência Energética.</p>
@@ -360,7 +357,7 @@
       Contact Section
       ============================-->
     <section id="contact">
-      <div class="container wow fadeInUp">
+      <div class="container wow">
         <div class="section-header">
           <h3 class="section-title">Contato</h3>
           <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
@@ -369,7 +366,7 @@
       </div>
 
 
-      <div class="container wow fadeInUp">
+      <div class="container wow">
         <div class="row justify-content-center">
 
           <div class="col-lg-3 col-md-4">
