--- a/instalacoes/instala.html
+++ b/instalacoes/instala.html
@@ -165,10 +165,10 @@
             <div class="col-lg-6 order-lg-1 order-2">
               <br>
               <br>
-              <h2 class="title" style="color: white;
-                text-shadow: 3px 3px 3px black;">Por que projetar as instalações de seu imóvel?</h2>
-              <p style="color: white;
-                text-shadow: 3px 3px 3px black;">
+              <h2 class="title" 
+                >Por que projetar as instalações de seu imóvel?</h2>
+              <p 
+                >
                 Instalações mal-projetadas e/ou mal-cuidadas são causas de inúmeros problemas. Tais problemas incluem questôes materiais:
                 diminuição da vida útil dos eletrônicos, equipamentos queimados, ou até mesmo questões de segurança como
                 queimaduras e até mesmo a morte.
@@ -176,11 +176,11 @@
 
               <div class=" wow fadeInUp">
                 <h4 class="title">
-                  <a style=" color: white;
-                text-shadow: 3px 3px 3px black;" href="">Como identificar os problemas?</a>
+                  <a 
+                 href="">Como identificar os problemas?</a>
                 </h4>
-                <p style=" color: white;
-                text-shadow: 3px 3px 3px black;" class="description">
+                <p 
+                 class="description">
                   Fios desencapados, instalações sem manutenção adequada ( o ideal é de 5 em 5 anos), a energia cai frequentemente.
 
                 </p>
@@ -188,11 +188,11 @@
 
               <div class=" wow fadeInUp" data-wow-delay="0.2s">
                 <h4 class="title">
-                  <a style=" color: white;
-              text-shadow: 3px 3px 3px black;" href="">Segurança</a>
+                  <a 
+               href="">Segurança</a>
                 </h4>
-                <p style=" color: white;
-              text-shadow: 3px 3px 3px black;" class="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
+                <p 
+               class="description">Uma instalação elétrica bem projetada e executada retira o risco que você pode ter na sua empresa ou na sa
                   residência. Os acidentes de origem elétrica aumentaram em todo o Brasil, segundo o anuário divulgado pela
                   Abracopel – Associação Brasileira de Conscientização para os Perigos da Eletricidade. Foram 1.387 ocorrências
                   registradas em 2017, sendo 702 fatais.
@@ -201,13 +201,13 @@
 
               <div class=" wow fadeInUp" data-wow-delay="0.4s">
                 <h4 class="title">
-                  <a style=" color: white;
-            text-shadow: 3px 3px 3px black;" href="">O que fazer?</a>
+                  <a 
+             href="">O que fazer?</a>
                 </h4>
-                <p style=" color: white;
-            text-shadow: 3px 3px 3px black;" class="description">
+                <p 
+             class="description">
                   Identificou algum problema?
-                  <a href="../contact.html">
+                  <a href="#contact">
                     Fale conosco.
                   </a>
                   Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
@@ -230,8 +230,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" >O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -250,7 +250,7 @@
               <h5 class="card-title">Instalações Elétricas</h5>
               <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
+                <a href="#contact">Fale conosco</a>
               </p>
             </div>
           </div>
