--- a/instalacoes/normas.html
+++ b/instalacoes/normas.html
@@ -167,17 +167,17 @@
               <br>
               <br>
 
-              <p style="color: white;
-                text-shadow: 3px 3px 3px black;">
+              <p 
+                >
                 As normas técnicas de engenharia elétrica visam a evitar problemas e garantir a segurança dos proprietários ou freuqentadores
                 daquele local. Em alguns casos, a não obediência à norma pode acarretar o fechamento do estabelecimento,
                 se descoberto durante uma fiscalização. É o que aconteceu com os food trucks: Um ano atrás, saiu uma resolução
                 dos bombeiros falando que os food que não seguissem a norma perderiam a licença para trabalhar.
-                <p style=" color: white;
-            text-shadow: 3px 3px 3px black;" class="description">
+                <p 
+             class="description">
                   A ENETEC analisa se seu estabelecimento está ou não de acordo com a norma, quais pontos é necessário uma mudança e como mudar.
                   Não corra riscos desnecessários!
-                  <a href="../contact.html">
+                  <a href="#contact">
                     Fale conosco.
                   </a>
                   Faremos um orçamento gratuito sem compromisso. Ficaremos felizes em ajudar.
@@ -198,8 +198,8 @@
     <section id="services" style="background: rgb(31,141,211)">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">O que podemos fazer por você</h3>
-          <p class="section-description" style="color:white; text-shadow: 0.5px 0.5px 0.5px gray">Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
+          <h3 class="section-title" >O que podemos fazer por você</h3>
+          <p style="color:white" class="section-description" >Possuimos uma carta de serviços feita para a sua enconomia, segurança e inovação.</p>
         </div>
 
         <div class="card-group">
@@ -218,7 +218,7 @@
               <h5 class="card-title">Instalações Elétricas</h5>
               <p class="card-text">Projetamos, fazemos análise e emitimos laudos técnicos de instalações elétricas. Tudo para garantir a sua segurança
                 e a estabilidade energética do local. Quer reformar a sua casa?
-                <a href="">Fale conosco</a>
+                <a href="#contact">Fale conosco</a>
               </p>
             </div>
           </div>
