--- a/port.html
+++ b/port.html
@@ -118,7 +118,7 @@
                 <a href="blog">Blog</a>
             </li>
             <li>
-              <a href="contact.html">Contato</a>
+              <a href="#contact">Contato</a>
             </li>
         </ul>
       </nav>
