--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       <div class="container wow fadeIn">
         <a href=""></a>
         <div class="section-header">
-          <h3 class="section-title">Como funciona para economizar com placas solares?</h3>
+          <h3 class="section-title" style="color:black;">Como funciona para economizar com placas solares?</h3>
           <p class="section-description">Em média, no Brasil, são consulmidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
         </div>
         <div class="row counters">
