--- a/simulador/index.html
+++ b/simulador/index.html
@@ -343,7 +343,7 @@
     <section id="facts" style="background: #efefef;">
       <div class="container wow fadeIn">
         <div class="section-header">
-          <h3 class="section-title">Como funciona para economizar com placas solares?</h3>
+          <h3 class="section-title" style="color:black;">Como funciona para economizar com placas solares?</h3>
           <p class="section-description">Em média, no Brasil, são consulmidos 157Kwh por mês, o que geraria esses resultados com placas solares:</p>
         </div>
         <div class="row counters">
