--- a/eficiencia/analise.html
+++ b/eficiencia/analise.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>ENETEC - Análise de Energia</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta content="conta, analise, economia, caro, alto" name="keywords">
   <meta content="Não precisa pagar alto na conta de luz. Economize com a gente!" name="description">
 
@@ -284,7 +284,7 @@
     <section id="contact">
       <div class="container wow fadeInUp">
         <div class="section-header">
-          <h3 class="section-title">Contato</h3>
+          <h3 class="section-title" style="color:black;">Contato</h3>
           <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
             em 24h no máximo</p>
         </div>
