--- a/simulador/index.html
+++ b/simulador/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta property="og:image" content="http://enetec.unb.br/img/hero-bg.jpg">
   <title>ENETEC - Simulador Solar</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta content="energia, sustentável, economia, solar, sistema, projeto,fotovoltaico, investimento" name="keywords">
   <meta content="Quer saber quanto economizaria com um sistema de energia solar? Simule aqui!" name="description">
 
@@ -412,7 +412,7 @@
   <section id="contact">
     <div class="container wow fadeInUp">
       <div class="section-header">
-        <h3 class="section-title">Contato</h3>
+        <h3 class="section-title" style="color:black;">Contato</h3>
         <p class="section-description">Fale conosco para obter mais informações sobre nosso serviços, estamos a disposição para ajudá-los. Responderemos
           em 24h no máximo</p>
       </div>
