--- a/eficiencia/quiz.html
+++ b/eficiencia/quiz.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta property="og:image" content="http://enetec.unb.br/img/hero-bg.jpg">
   <title>ENETEC - Quiz</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <meta content="energia, sustentável, economia, solar, sistema, projeto,fotovoltaico, investimento" name="keywords">
   <meta content="Quer saber quanto economizaria com um sistema de energia solar? Simule aqui!" name="description">
 
