--- a/eficiencia/lumino.html
+++ b/eficiencia/lumino.html
@@ -63,14 +63,14 @@
             <a href="">Serviços</a>
             <ul>
               <li class="menu-has-children">
-                <a href="">Fotovoltaica</a>
+                <a style="pointer-events: none; cursor: pointer;">Fotovoltaica</a>
                 <ul>
                   <li>
                     <a href="../simulador/index.html">Simulador de Placas Solares</a>
                   </li>
                 </ul>
                 <li class="menu-has-children">
-                  <a href="">Instalações</a>
+                  <a style="pointer-events: none; cursor: pointer;">Instalações</a>
                   <ul>
                     <li>
                       <a href="../instalacoes/instala.html">Projetos</a>
@@ -84,7 +84,7 @@
                   </ul>
 
                   <li class="menu-has-children">
-                    <a href="">Eficiência</a>
+                    <a style="pointer-events: none; cursor: pointer;">Eficiência</a>
                     <ul>
                       <li>
                         <a href="../eficiencia/lumino.html">Luminotécnico</a>
