--- a/about/index.html
+++ b/about/index.html
@@ -61,10 +61,6 @@
           <li>
             <a href="../index.html">Início</a>
           </li>
-          <li>
-              <a href="#">Quem Somos
-                <a/>
-            </li>
           <li class="menu-has-children">
             <a href="">Serviços</a>
             <ul>
@@ -129,6 +125,9 @@
             <li>
               <a href="#contact">Contato</a>
             </li>
+            <li>
+                <a href="#">Sobre Nós</a>
+              </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
