--- a/simulador/index.html
+++ b/simulador/index.html
@@ -125,6 +125,9 @@
             <li>
               <a href="#contact">Contato</a>
             </li>
+            <li>
+              <a href="../about/index.html">Sobre Nós</a>
+            </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
@@ -137,16 +140,16 @@
     ============================-->
   <section id="hero" style="background: url(../img/hero-bg.jpg) top center fixed;">
     <div class="icons">
-        <a href="https://www.linkedin.com/company/enetec-consultoria/">
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.facebook.com/enetec.consultoria/">
-          <i class="fa fa-facebook" aria-hidden="true"></i>
-        </a>
-        <a href="https://www.instagram.com/enetec/">
-          <i class="fa fa-instagram" aria-hidden="true"></i>
-        </a>
-      </div>
+      <a href="https://www.linkedin.com/company/enetec-consultoria/">
+        <i class="fa fa-linkedin" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.facebook.com/enetec.consultoria/">
+        <i class="fa fa-facebook" aria-hidden="true"></i>
+      </a>
+      <a href="https://www.instagram.com/enetec/">
+        <i class="fa fa-instagram" aria-hidden="true"></i>
+      </a>
+    </div>
     <div class="hero-container">
       <img src="../img/logo-header.png">
       <h2> </h2>
@@ -559,7 +562,7 @@
         <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDsI0QHnCcyoVC45De8bqNGA2oeXXtrEos&callback=initMap">
         </script>
         <script async src="js/google_map.js"></script>
-        
+
         <script src="mostrar.js"></script>
         <script src="../js/main2.js"></script>
         <script src="simulador.js"></script>
