--- a/eficiencia/quiz.html
+++ b/eficiencia/quiz.html
@@ -123,6 +123,9 @@
             <li>
               <a href="#contact">Contato</a>
             </li>
+            <li>
+                <a href="../about/index.html">Sobre Nós</a>
+              </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
