--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
             <li>
               <a href="#contact">Contato</a>
             </li>
+            <li>
+                <a href="about/index.html">Sobre Nós</a>
+              </li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
