--- a/about/index.html
+++ b/about/index.html
@@ -216,7 +216,7 @@
 
 
           <h4 style="color:black; text-align: center">
-            "Promover desenvolviemnto pessoa e expriência profissional ao aluno de engenharia elétrica"</h4>
+            "Promover desenvolvimento pessoal e experiência profissional ao aluno de engenharia elétrica"</h4>
 
 
         </div>
