--- a/simulador/index.html
+++ b/simulador/index.html
@@ -237,8 +237,9 @@
                       <div class="container-contact2-form-btn">
                         <div class="wrap-contact2-form-btn">
                           <div class="contact2-form-bgbtn"></div>
-                          <button class="contact2-form-btn">
-                            <input type="submit" placeholder="Simular" id="simule" />
+                          <button class="contact2-form-btn" id="simule">
+                            <span> Simule </span>
+                            <input type="submit" hidden />
                           </button>
                         </div>
                       </div>
